[tool.poetry]
name = "hackerrank"
version = "0.1.0"
description = ""
authors = ["Thomas Flourent <t.flourent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
